--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "yarn tsCheck  && vite build",
     "build:dev": "yarn tsCheck && vite build --mode development",
     "serve": "vite preview",
-		"tsCheck":"vue-tsc --noEmit --skipLibCheck",
+    "tsCheck": "vue-tsc --noEmit --skipLibCheck",
     "lint": "eslint ./src --ext .vue,.js,jsx,.ts,tsx",
     "lint:fix": "eslint --fix ./src --ext .vue,.js,jsx,.ts,tsx",
     "prepare": "husky install"
@@ -29,6 +29,8 @@
   "devDependencies": {
     "@commitlint/cli": "^16.2.1",
     "@commitlint/config-conventional": "^16.2.1",
+    "@iconify/json": "^2.1.3",
+    "@iconify/vue": "^3.1.3",
     "@types/chroma-js": "^2.1.3",
     "@types/qs": "^6.9.7",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
